fix(package): Fixing active color and background-color of droplist-item to align with ADG3 styles.
affects: @atlaskit/droplist-item

--- a/packages/droplist-item/src/variables.less
+++ b/packages/droplist-item/src/variables.less
@@ -10,7 +10,7 @@
 
 @ak-dropdown-border-radius: @ak-border-radius;
 @ak-dropdown-background-main-color: @ak-color-N0;
-@ak-dropdown-background-active-color: @ak-color-B50;
+@ak-dropdown-background-active-color: @ak-color-N700;
 @ak-dropdown-background-selected-color: @ak-color-N20;
 @ak-dropdown-background-hover-color: @ak-color-N20;
 
@@ -18,7 +18,7 @@
 
 @ak-dropdown-font-main-color: @ak-color-N800;
 @ak-dropdown-font-disabled-color: @ak-color-N70;
-@ak-dropdown-font-active-color: @ak-color-N800;
+@ak-dropdown-font-active-color: @ak-color-N20;
 
 @ak-dropdown-icon-color: @ak-color-N400;
 @ak-dropdown-icon-reverse-color: @ak-color-B50;
